[tool.poetry]
name = "aimmo_assignment"
version = "0.1.0"
description = ""
authors = ["Joowan Kim <rlawndhks217@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2.9"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
assertpy = "1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
